fixed navbar image/txt alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -36,11 +36,29 @@ section {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
+        justify-content: center;
+        .nav {
+            margin-top: 38px;
+            text-decoration: none;
+            color: black;
+            img {
+            margin-right: 20px;
+        }
+        }
+        .settings {
+            text-decoration: none;
+            color: black;
+            margin: 40px;
+        }
     }
     .left {
         width: 200px;
         display: flex;
         flex-flow: column nowrap;
+        .navtxt {
+            position: relative;
+            bottom: 4px;
+        }
     }
     .right {
         width: auto;
